test_files/valid/test1.cpm
main(): int {  
  volatile result : int := 2*4+5*6
  result := 2*4+5*6/4
  state : boolean := false
  state := !state
  return 0
}