test_files/syntax_errors/ExtraToken.cpm
main() : int {
  number := 10
  fwe:= 32        //@error - syntax (stray assignment operator)
  print(number)
  return 0
}